--- a/css/style.css
+++ b/css/style.css
@@ -7,11 +7,9 @@ h3 {
   text-align: center;
 }
 
-header,
-nav,
-div {
-  margin: auto;
-  width: 50%;
+footer{
+  padding: 5px;
+  text-align: center;
 }
 
 img {
@@ -29,5 +27,7 @@ td {
   border: 1px solid black;
   border-collapse: collapse;
 }
+
+
 
 
